src/objects/Platform__c/Platform__c.object-meta.xml
<CustomObject>
    <label>Platform</label>
    <nameField>
        <label>Platform  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platforms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>