src/objects/Platform__c/fields/A_check_Estimated_AC_Downtime_Days__c.field-meta.xml
<CustomField>
    <fullName>A_check_Estimated_AC_Downtime_Days__c</fullName>
    <label>A check Estimated AC Downtime (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>