src/objects/Platform__c/fields/A_Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>A_Event_Duration__c</fullName>
    <label>A check Time Frame ( Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>