src/objects/Platform__c/fields/AC_PLTFM_ID__c.field-meta.xml
<CustomField>
    <fullName>AC_PLTFM_ID__c</fullName>
    <label>AC Platform ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>