src/objects/Platform__c/fields/ACHK_NUM__c.field-meta.xml
<CustomField>
    <fullName>ACHK_NUM__c</fullName>
    <inlineHelpText>Airframe A Check period/interval in Hrs</inlineHelpText>
    <label>A Check Flight Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>