src/objects/Platform__c/fields/Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Aircraft__c</fullName>
    <label>Aircraft</label>
    <summaryFilterItems>
        <field>Fleet_Asset_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>In Service,Storage</value>
    </summaryFilterItems>
    <summaryForeignKey>Fleet_Asset_Detail__c.Platform_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>