src/objects/Platform__c/fields/APU_Engine_OEM_Warranty_Period__c.field-meta.xml
<CustomField>
    <fullName>APU_Engine_OEM_Warranty_Period__c</fullName>
    <label>APU Engine OEM Warranty Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>