src/objects/Platform__c/fields/APU_Maker__c.field-meta.xml
<CustomField>
    <fullName>APU_Maker__c</fullName>
    <label>APU Maker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>