src/objects/Platform__c/fields/Avg_Flying_Hors_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Avg_Flying_Hors_Per_Year__c</fullName>
    <formula>Avg_Flying_Hours_Per_Month__c *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Flying Hours Per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>