src/objects/Platform__c/fields/Avg_Flying_Hours_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Avg_Flying_Hours_Per_Month__c</fullName>
    <label>Avg Flying Hours  ( Per Month )</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>