src/objects/Platform__c/fields/B_Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>B_Event_Duration__c</fullName>
    <label>B check Time Frame ( Months )</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>