src/objects/Platform__c/fields/BCHK_NUM__c.field-meta.xml
<CustomField>
    <fullName>BCHK_NUM__c</fullName>
    <inlineHelpText>Airframe B Check period/interval in Hrs</inlineHelpText>
    <label>B Check Flight Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>