src/objects/Platform__c/fields/C_Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>C_Event_Duration__c</fullName>
    <label>C check Time Frame ( Months )</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>