src/objects/Platform__c/fields/CCHK_NUM__c.field-meta.xml
<CustomField>
    <fullName>CCHK_NUM__c</fullName>
    <inlineHelpText>Airframe C Check period/interval in Hrs</inlineHelpText>
    <label>C Check Flight Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>