src/objects/Platform__c/fields/CREATED_BY_ID__c.field-meta.xml
<CustomField>
    <fullName>CREATED_BY_ID__c</fullName>
    <description>created on demand by Dieter for data migration</description>
    <label>CREATED BY ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>