src/objects/Platform__c/fields/DCHK_NUM__c.field-meta.xml
<CustomField>
    <fullName>DCHK_NUM__c</fullName>
    <inlineHelpText>Airframe D Check period/interval in Hrs</inlineHelpText>
    <label>D Check Flight Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>