src/objects/Platform__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Defines the End Date for this Platform..</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>