src/objects/Platform__c/fields/Engine_Maker__c.field-meta.xml
<CustomField>
    <fullName>Engine_Maker__c</fullName>
    <inlineHelpText>Defines the Engine Maker.</inlineHelpText>
    <label>Engine Maker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>