src/objects/Platform__c/fields/Engine_Master_Series__c.field-meta.xml
<CustomField>
    <fullName>Engine_Master_Series__c</fullName>
    <label>Engine Master Series</label>
    <length>100</length>
    <type>Text</type>
</CustomField>