src/objects/Platform__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>added on demand by Dieter for data migration</description>
    <label>Make</label>
    <length>100</length>
    <type>Text</type>
</CustomField>