src/objects/Platform__c/fields/Make_Model__c.field-meta.xml
<CustomField>
    <fullName>Make_Model__c</fullName>
    <formula>Make__c +  Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Make &amp; Model</label>
    <type>Text</type>
</CustomField>