src/objects/Platform__c/fields/Managing_SBU__c.field-meta.xml
<CustomField>
    <fullName>Managing_SBU__c</fullName>
    <label>Managing SBU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACS Labs</fullName>
            </value>
            <value>
                <fullName>ATR</fullName>
            </value>
            <value>
                <fullName>BGA</fullName>
            </value>
            <value>
                <fullName>D&amp;S</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>