src/objects/Platform__c/fields/MAXALT_NUM__c.field-meta.xml
<CustomField>
    <fullName>MAXALT_NUM__c</fullName>
    <label>Max. Alt</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>