src/objects/Platform__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <inlineHelpText>Defines the Model.</inlineHelpText>
    <label>Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>