src/objects/Platform__c/fields/Model_Name_without_Hypen__c.field-meta.xml
<CustomField>
    <fullName>Model_Name_without_Hypen__c</fullName>
    <formula>SUBSTITUTE(Model__c, &apos;-&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model Name without Hypen</label>
    <type>Text</type>
</CustomField>