src/objects/Platform__c/fields/OEM_Name__c.field-meta.xml
<CustomField>
    <fullName>OEM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Defines the OEM/Maker Name for the current Platform.</inlineHelpText>
    <label>OEM Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Platforms</relationshipLabel>
    <relationshipName>Platforms</relationshipName>
    <type>Lookup</type>
</CustomField>