src/objects/Platform__c/fields/Parent_Platform__c.field-meta.xml
<CustomField>
    <fullName>Parent_Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Platform</label>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>Platforms</relationshipLabel>
    <relationshipName>Platforms</relationshipName>
    <type>Lookup</type>
</CustomField>