src/objects/Platform__c/fields/percent_withdrawn_from_use__c.field-meta.xml
<CustomField>
    <fullName>percent_withdrawn_from_use__c</fullName>
    <label>% withdrawn from use</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>