src/objects/Platform__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <inlineHelpText>Defines the Platform.</inlineHelpText>
    <label>Platform</label>
    <length>100</length>
    <type>Text</type>
</CustomField>