src/objects/Platform__c/fields/Platform_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Platform_Depreciation__c</fullName>
    <label>Platform Depreciation</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>