src/objects/Platform__c/fields/Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Platform_Type__c</fullName>
    <inlineHelpText>Defines the Platform Type.</inlineHelpText>
    <label>Platform Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airplane</fullName>
            </value>
            <value>
                <fullName>Combat Support Vehicles</fullName>
            </value>
            <value>
                <fullName>Combat Vehicles</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicles</fullName>
            </value>
            <value>
                <fullName>Components</fullName>
            </value>
            <value>
                <fullName>Fire Direction Control Vehicle</fullName>
            </value>
            <value>
                <fullName>Helicopter</fullName>
            </value>
            <value>
                <fullName>Hovercraft</fullName>
            </value>
            <value>
                <fullName>Marine Craft</fullName>
            </value>
            <value>
                <fullName>Missiles &amp; Munitions</fullName>
            </value>
            <value>
                <fullName>Non-Aircraft</fullName>
            </value>
            <value>
                <fullName>Radar</fullName>
            </value>
            <value>
                <fullName>Service Center</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Surface Ship</fullName>
            </value>
            <value>
                <fullName>Tactical Vehicles</fullName>
            </value>
            <value>
                <fullName>Various</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>