src/objects/Platform__c/fields/PROD_QTY__c.field-meta.xml
<CustomField>
    <fullName>PROD_QTY__c</fullName>
    <label>Production Quantity</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>