src/objects/Platform__c/fields/Required_Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>Required_Organization_ID__c</fullName>
    <label>Required Organization ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>