src/objects/Platform__c/fields/SAP_External_System__c.field-meta.xml
<CustomField>
    <fullName>SAP_External_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP External System</label>
    <type>Checkbox</type>
</CustomField>