src/objects/Platform__c/fields/Serial_Number_Format__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Format__c</fullName>
    <label>Serial Number Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>