src/objects/Platform__c/fields/SRD_Supported__c.field-meta.xml
<CustomField>
    <fullName>SRD_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SRD Supported?</label>
    <type>Checkbox</type>
</CustomField>