src/objects/Platform__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>Parent_Platform_Text__c</columns>
    <columns>Parent_Platform__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Platform_Type__c</columns>
    <columns>OEM_Name__c</columns>
    <columns>Managing_SBU__c</columns>
    <columns>Serial_Number_Format__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FA_Xref_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>