src/objects/Platform__c/listViews/All_ATR.listView-meta.xml
<ListView>
    <fullName>All_ATR</fullName>
    <columns>Parent_Platform_Text__c</columns>
    <columns>Parent_Platform__c</columns>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Platform_Type__c</columns>
    <columns>SAP_External_System__c</columns>
    <columns>Serial_Number_Format__c</columns>
    <columns>Managing_SBU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Managing_SBU__c</field>
        <operation>equals</operation>
        <value>ATR</value>
    </filters>
    <label>All ATR</label>
</ListView>