src/objects/Platform__c/listViews/All_Formatted.listView-meta.xml
<ListView>
    <fullName>All_Formatted</fullName>
    <columns>Parent_Platform_Text__c</columns>
    <columns>Parent_Platform__c</columns>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Platform_Type__c</columns>
    <columns>Serial_Number_Format__c</columns>
    <columns>OEM_Model_Number__c</columns>
    <columns>OEM_SN_Length__c</columns>
    <columns>SAP_External_System__c</columns>
    <columns>Managing_SBU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Serial_Number_Format__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Formatted</label>
</ListView>