src/objects/Platform__c/listViews/All_Inactive.listView-meta.xml
<ListView>
    <fullName>All_Inactive</fullName>
    <columns>Parent_Platform_Text__c</columns>
    <columns>Parent_Platform__c</columns>
    <columns>NAME</columns>
    <columns>Platform_Type__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>OEM_Name__c</columns>
    <columns>Managing_SBU__c</columns>
    <columns>Serial_Number_Format__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All - Inactive</label>
</ListView>