src/objects/Platform__c/listViews/All_Mfg_Airbus_ACJ.listView-meta.xml
<ListView>
    <fullName>All_Mfg_Airbus_ACJ</fullName>
    <booleanFilter>(1 or 2) and 3</booleanFilter>
    <columns>Parent_Platform_Text__c</columns>
    <columns>Parent_Platform__c</columns>
    <columns>NAME</columns>
    <columns>Platform_Type__c</columns>
    <columns>Active__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Managing_SBU__c</columns>
    <columns>Aircraft__c</columns>
    <columns>Serial_Number_Format__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SAP_External_System__c</columns>
    <columns>Engine__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Make__c</field>
        <operation>contains</operation>
        <value>Airbus</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Airbus</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>ACJ</value>
    </filters>
    <label>All - Mfg Airbus (ACJ A/C)</label>
    <language>en_US</language>
</ListView>